[package]
name = "etokensign"
version = "0.1.0"
authors = ["Scott Sedgwick <ssedgwick@cochlear.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ="3.0.0-beta.1"
log = { version = "0.4", features = ["std", "serde"] }
scopeguard = "1.1.0"
simple_logger = "1.6.0"
wchar = "0.6.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincrypt"] }
